# LiveKit_Kokoro_TTS

./: .gitignore  README.md  agent.py  kokoro.py  learn.txt  pyproject.toml  start.sh
Kokoro-FastAPI/: pyproject.toml
Kokoro-FastAPI/api/src/: main.py
Kokoro-FastAPI/api/src/core/: config.py
