[project]
name = "voice_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "kokoro>=0.9.4",
    "livekit-agents>=1.5.17",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-openai>=1.5.17",
    "livekit-plugins-silero>=1.5.17",
    "livekit-plugins-turn-detector>=1.5.17",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "soundfile>=0.14.0",
    "torch>=2.12.0",
    "uvicorn>=0.49.0",
]

[tool.uv.workspace]
members = [
    "coqui_server",
]
